objects/Contact.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>BU__c</fullName>
        <description>Business Unit</description>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dx</fullName>
                </value>
                <value>
                    <fullName>IDS</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
                <value>
                    <fullName>ONE</fullName>
                </value>
                <value>
                    <fullName>EH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMF__c</fullName>
        <label>FMF #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <description>used for SGL data load</description>
        <label>NPI</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNP__c</fullName>
        <label>SNP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APHL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APHL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000000JDZu&quot;, &quot;Edit&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Film__c</fullName>
        <label>Film</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Amersham</fullName>
                </value>
                <value>
                    <fullName>VWR</fullName>
                </value>
                <value>
                    <fullName>Fisher</fullName>
                </value>
                <value>
                    <fullName>Fuji</fullName>
                </value>
                <value>
                    <fullName>Kodak</fullName>
                </value>
                <value>
                    <fullName>Mandel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Application Focus</description>
        <label>GPCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NTQR__c</fullName>
        <label>NTQR #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>European</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Management</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Farmer/Grower</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Regulatory/Compliance</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Secondary Contact</fullName>
                </value>
                <value>
                    <fullName>No Potential</fullName>
                </value>
                <value>
                    <fullName>Low Potential</fullName>
                </value>
                <value>
                    <fullName>Key Opinion Leader</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Primary Investigator</fullName>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Contract Contact</fullName>
                </value>
                <value>
                    <fullName>Accounts Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;https://na45.salesforce.com/&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dx__c</fullName>
        <formula>AND 
( 
INCLUDES(BU__c, &quot;Dx&quot;), 
NOT(INCLUDES(BU__c,&quot;SVC&quot;)), 
NOT(INCLUDES(BU__c,&quot;INF&quot;)), 
NOT(INCLUDES(BU__c,&quot;LST&quot;)), 
NOT(INCLUDES(BU__c,&quot;MED&quot;)), 
NOT(INCLUDES(BU__c,&quot;ONE&quot;)), 
NOT(INCLUDES(BU__c,&quot;EH&quot;)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Dx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>used for SGL</description>
        <label>Title</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assays__c</fullName>
        <label>Diagnostics – Assays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>17OHP</fullName>
                </value>
                <value>
                    <fullName>aCGH</fullName>
                </value>
                <value>
                    <fullName>ADAM-12</fullName>
                </value>
                <value>
                    <fullName>AFP</fullName>
                </value>
                <value>
                    <fullName>Biotinidase</fullName>
                </value>
                <value>
                    <fullName>BoBs</fullName>
                </value>
                <value>
                    <fullName>CGX Oligo Arrays</fullName>
                </value>
                <value>
                    <fullName>CGX Onco Arrays</fullName>
                </value>
                <value>
                    <fullName>fbHCG</fullName>
                </value>
                <value>
                    <fullName>FragilEase</fullName>
                </value>
                <value>
                    <fullName>G6PD</fullName>
                </value>
                <value>
                    <fullName>GALT</fullName>
                </value>
                <value>
                    <fullName>Hb</fullName>
                </value>
                <value>
                    <fullName>HCG</fullName>
                </value>
                <value>
                    <fullName>IRT</fullName>
                </value>
                <value>
                    <fullName>KaryoLite BoBs</fullName>
                </value>
                <value>
                    <fullName>MSMS</fullName>
                </value>
                <value>
                    <fullName>NT4</fullName>
                </value>
                <value>
                    <fullName>NTSH</fullName>
                </value>
                <value>
                    <fullName>PAPPA</fullName>
                </value>
                <value>
                    <fullName>PKU</fullName>
                </value>
                <value>
                    <fullName>PP13</fullName>
                </value>
                <value>
                    <fullName>Prenatal BoBs</fullName>
                </value>
                <value>
                    <fullName>Steroids</fullName>
                </value>
                <value>
                    <fullName>TGAL</fullName>
                </value>
                <value>
                    <fullName>TOXO</fullName>
                </value>
                <value>
                    <fullName>uE3</fullName>
                </value>
                <value>
                    <fullName>Vitamin D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRET_2__c</fullName>
        <label>BRET-2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quoted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A+ - Global Key Account</fullName>
                </value>
                <value>
                    <fullName>A - High Potential</fullName>
                </value>
                <value>
                    <fullName>B - Good Potential</fullName>
                </value>
                <value>
                    <fullName>C - Modest Potential</fullName>
                </value>
                <value>
                    <fullName>D - Low Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>Jr.</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>Sr.</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>BS</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>BA</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>MBA</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>PhD</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>MS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced with Pardot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AA List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FP_cAMP__c</fullName>
        <label>FP cAMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GC_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GC List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICH_ISH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application Focus Area</description>
        <label>ICH/ISH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IR_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IR List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LC_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LC List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LQS_Air__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Air</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_CO__c</fullName>
        <label>Last CO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Business Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADME_Tox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For App Focus</description>
        <label>ADME Tox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALH_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALH List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANP_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ANP List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BioFuels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BioFuels List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPCombo__c</fullName>
        <formula>BLANKVALUE(Email,&apos;&apos;) + BLANKVALUE(Completion_Action_Product__c,&apos;&apos;) + BLANKVALUE(IGOR_PAC__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPCombo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cytokine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For App Focus</description>
        <label>Cytokine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLR_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLR List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Function from SAP</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Basic Research</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>EDP manager</fullName>
                </value>
                <value>
                    <fullName>Education/Teaching</fullName>
                </value>
                <value>
                    <fullName>Electronics/Semicndt</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Executive Board</fullName>
                </value>
                <value>
                    <fullName>Fin.accountg manager</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Food/Environmental</fullName>
                </value>
                <value>
                    <fullName>Head of Personnel</fullName>
                </value>
                <value>
                    <fullName>Head of Purchasing</fullName>
                </value>
                <value>
                    <fullName>Head of Sales</fullName>
                </value>
                <value>
                    <fullName>Head of the Canteen</fullName>
                </value>
                <value>
                    <fullName>Human Disease Resrch</fullName>
                </value>
                <value>
                    <fullName>Human Identity</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Janitor</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Mining and Geologica</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Assistant</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Polymers &amp; Plastics</fullName>
                </value>
                <value>
                    <fullName>Therapeutics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICP_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICP List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGOR_PAC__c</fullName>
        <label>IGOR_PAC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMG_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMG List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVI_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LVI List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>IF( ISPICKVAL(PKI_SAP_Language__c, &quot;AF&quot;), &quot;Afrikaans&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;AR&quot;), &quot;Arabic&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;BG&quot;), &quot;Bulgarian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;CA&quot;), &quot;Catalan / Valencian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;CS&quot;), &quot;Czech&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;DA&quot;), &quot;Danish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;DE&quot;), &quot;German&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;EL&quot;), &quot;Greek modern&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;EN&quot;), &quot;English&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ES&quot;), &quot;Spanish / Castilian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ET&quot;), &quot;Estonian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;FI&quot;), &quot;Finnish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;FR&quot;), &quot;French&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HE&quot;), &quot;Hebrew modern&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HI&quot;), &quot;Hindi&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HR&quot;), &quot;Croatian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HU&quot;), &quot;Hungarian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ID&quot;), &quot;Indonesian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;IS&quot;), &quot;Icelandic&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;IT&quot;), &quot;Italian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;JA&quot;), &quot;Japanese&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;KO&quot;), &quot;Korean&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;LT&quot;), &quot;Lithuanian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;LV&quot;), &quot;Latvian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;MI&quot;), &quot;Midway Island&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;MS&quot;), &quot;Malay&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;NL&quot;), &quot;Dutch&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;NO&quot;), &quot;Norwegian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;PL&quot;), &quot;Polish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;PT&quot;), &quot;Portuguese&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;RO&quot;), &quot;Romanian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;RU&quot;), &quot;Russian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SH&quot;), &quot;Serbian Latin&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SK&quot;), &quot;Slovak&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SL&quot;), &quot;Slovene&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SR&quot;), &quot;Serbian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SU&quot;), &quot;Union Of Soviet Socialist Republics&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SV&quot;), &quot;Swedish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;TH&quot;), &quot;Thai&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;TR&quot;), &quot;Turkish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;UK&quot;), &quot;Ukrainian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;WK&quot;), &quot;Wake Island&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;XT&quot;), &quot;Turkish Republic of Northern Cyprus&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;Z1&quot;), &quot;Customer reserve&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ZF&quot;), &quot;Chinese Trad.&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ZH&quot;), &quot;Chinese&quot;,
&quot;See -Language ISO Code- field&quot;)
)))))))))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLD_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MLD List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PGI_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PGI List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRD_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RRD List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEA_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEA List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRF_cAMP__c</fullName>
        <label>TRF cAMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>CisBio</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>12+ months</fullName>
                </value>
                <value>
                    <fullName>We’ve already engaged a partner</fullName>
                </value>
                <value>
                    <fullName>We don’t have any current plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Dx__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Genetic Counselor</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Sonographer</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Financial Contact</fullName>
                </value>
                <value>
                    <fullName>Reporting Contact</fullName>
                </value>
                <value>
                    <fullName>Shipping Contact</fullName>
                </value>
                <value>
                    <fullName>Receptionist</fullName>
                </value>
                <value>
                    <fullName>Lab Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UVS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UVS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_RX__c</fullName>
        <label>Annual RX</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bead_cAMP__c</fullName>
        <label>Bead cAMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amersham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>